[tool.poetry]
name = "coding-challenges"
version = "0.1.0"
description = ""
authors = ["vaishnave-s <buzzvaishu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
arrays = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
