[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["vaishnave-s <buzzvaishu@gmail.com>"]
description = ""
name = "coding-challenges"
version = "0.1.0"
[tool.poetry.dependencies]
arrays = "^0.0.5"
python = "^3.8"
[tool.poetry.dev-dependencies]
